--- a/app/views/books/edit.html.erb
+++ b/app/views/books/edit.html.erb
@@ -1,2 +1,29 @@
-<h1>Books#edit</h1>
-<p>Find me in app/views/books/edit.html.erb</p>
+　　<!DOCTYPE html>
+　<html>
+<head>
+   <title>Bookers</title>
+</head>
+
+<body>
+    <h1>Editing Book</h1>
+
+
+<%= form_with model: @book, url:book_path(@book.id), method: :patch do |f| %>
+
+  <div class="field">Title</div>
+  <%= f.text_field :title %>
+	
+  <div class="field">Body</div>
+  <%= f.text_area :body %>
+  
+	<div class="field"></div>
+  <%= f.submit 'Create Book' %>
+<% end %>  
+
+<%= link_to "Show", book_path(@book.id) %> 
+|
+<%= link_to "Back", books_path %>
+
+  
+
+</body>
