--- a/app/views/books/index.html.erb
+++ b/app/views/books/index.html.erb
@@ -1,2 +1,52 @@
-<h1>Books#index</h1>
-<p>Find me in app/views/books/index.html.erb</p>
+<!DOCTYPE html>
+<html>
+<head>
+   <title>Bookers</title>
+</head>
+
+  <body>
+    <p id="notice"></p>
+
+<h1>Books</h1>
+
+<table>
+  <thead>
+    <tr>
+      <th>Title</th>
+      <th>Body</th>
+      <th colspan="3"></th>
+    </tr>
+  </thead>
+
+  <tbody>
+       <% @books.each do |book| %>
+       <tr>
+          <td> <%= book.title %> </td>
+          <td> <%= book.body %> </td>
+          <td> 
+          <%= link_to "show", book_path(book.id) %> 
+          <%= link_to "edit", edit_book_path(book.id) %>
+          <%= link_to "destroy", book_path(book.id), method: :delete, "data-confirm" => "Are you sure?" %> 
+          </td> 
+        </tr> <% end %>
+  </tbody>
+</table>
+
+
+<h2>New book</h2>
+
+<%= form_with model: @book, url: '/books', method: :post  do |f| %>
+  <div class="field">Title</div>
+  <%= f.text_field :title %>
+	
+  <div class="field">Body</div>
+  <%= f.text_area :body %>
+  
+	<div class="field"></div>
+  <%= f.submit 'Create Book' %>
+<% end %>  
+
+  
+
+</body>
+</html>
