--- a/app/views/books/edit.html.erb
+++ b/app/views/books/edit.html.erb
@@ -6,7 +6,15 @@
 
 <body>
     <h1>Editing Book</h1>
-
+  
+  <% if @book.errors.any? %>
+  <%= @book.errors.count %>件のerrorが発生しました
+  <ul>
+    <% @book.errors.full_messages.each do |message| %>
+      <li><%= message %></li>
+    <% end %>
+  </ul>
+<% end %>
 
 <%= form_with model: @book, url:book_path(@book.id), method: :patch do |f| %>
 
