--- a/app/views/books/index.html.erb
+++ b/app/views/books/index.html.erb
@@ -5,9 +5,12 @@
 </head>
 
   <body>
-    <p id="notice"></p>
+    <div>
+  <%= flash[:notice] %>
+</div>
 
 <h1>Books</h1>
+
 
 <table>
   <thead>
@@ -34,6 +37,15 @@
 
 
 <h2>New book</h2>
+
+<% if @book.errors.any? %>
+  <%= @book.errors.count %>件のerrorが発生しました
+  <ul>
+    <% @book.errors.full_messages.each do |message| %>
+      <li><%= message %></li>
+    <% end %>
+  </ul>
+<% end %>
 
 <%= form_with model: @book, url: '/books', method: :post  do |f| %>
   <div class="field">Title</div>
