--- a/app/views/books/edit.html.erb
+++ b/app/views/books/edit.html.erb
@@ -25,7 +25,7 @@
   <%= f.text_area :body %>
   
 	<div class="field"></div>
-  <%= f.submit 'Create Book' %>
+  <%= f.submit 'Update Book' %>
 <% end %>  
 
 <%= link_to "Show", book_path(@book.id) %> 
